[package]
name = "rustinsight"
version = "0.1.7"
edition = "2021"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
description = "The launcher app for Rust Insight! Lab"
repository = "https://github.com/rustinsight/lab"
homepage = "https://rustinsight.com"
license = "GPL-3.0"
readme = "README.md"

[dependencies]
anyhow = "1.0.70"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.1.11", features = ["derive"] }
colored = "2.0.0"
derive_more = "0.99.17"
dialoguer = "0.10.3"
dirs = "5.0.0"
flate2 = "1.0.25"
futures = "0.3.27"
indicatif = "0.17.3"
once_cell = "1.17.1"
platforms = "3.0.2"
reqwest = { version = "0.11.14", features = ["json", "stream"] }
semver = { version = "1.0.17", features = ["serde"] }
serde = { version = "1.0.158", features = ["derive"] }
tar = "0.4.38"
tempfile = "3.4.0"
tokio = { version = "1.26.0", features = ["full"] }
toml = "0.7.3"
webbrowser = "0.8.8"

[build-dependencies]
built = "0.6.0"

[[bin]]
name = "ride"
required-features = ["ride"]

[features]
default = ["ride"]
ride = []
