[package]
name = "knowledge"
version = "0.4.4"
edition = "2021"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
description = "The launcher app for the interacive book"
repository = "https://github.com/rustinsight/lab"
homepage = "https://knowledge.dev"
license = "GPL-3.0"
readme = "README.md"
default-run = "knowledge"

[dependencies]
anyhow = "1.0.81"
chrono = { version = "0.4.37", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
derive_more = "0.99.17"
dialoguer = "0.11.0"
dirs = "5.0.1"
flate2 = "1.0.28"
futures = "0.3.30"
indicatif = "0.17.8"
once_cell = "1.19.0"
platforms = "3.4.0"
reqwest = { version = "0.12.2", features = ["json", "stream"] }
semver = { version = "1.0.22", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
tar = "0.4.40"
tempfile = "3.10.1"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.12"
webbrowser = "0.8.13"

[build-dependencies]
built = "0.7.1"

[[bin]]
name = "ride"
required-features = ["ride"]

[[bin]]
name = "rustinsight"
required-features = ["ride"]

[features]
default = ["ride"]
ride = []
